--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # If you are building a simple GitHub user page (https://username.github.io) then use these settings:
 url: "https://nghichcode.com"
-baseurl: "beautiful-jekyll/"
+baseurl: "/beautiful-jekyll"
 
 # If you are building a GitHub project page then use these settings:
 #url: "http://username.github.io/projectname"
@@ -13,14 +13,11 @@ baseurl: "beautiful-jekyll/"
 
 # Of course don't forget to change the username and projectname to YOUR username and project
 
-# Name of website
 title: My website
-
 # Short description of your site
 description: A virtual proof that name is awesome!
 
 # --- Navigation bar options --- #
-
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
