--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@ navbar-links:
 
 avatar: "/img/avatar-icon.jpg"
 
-navbar-col: "#ffaa22"
+navbar-col: "#FF9966"
 navbar-text-col: "#404040"
-navbar-children-col: "#F5F5F5"
+navbar-children-col: "#FF9966"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#F5F5F5"
+footer-col: "#FF9966"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
