--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,14 @@ navbar-links:
 avatar: "/img/avatar-icon.jpg"
 
 navbar-col: "#FF9966"
-navbar-text-col: "#f5f5f5"
+navbar-text-col: "#FFFFFF"
 navbar-children-col: "#FF9966"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#FF9966"
 footer-text-col: "#ff2a2a"
-footer-link-col: "#404040"
+footer-link-col: "#ff2a2a"
 
 author:
   name: Tin Cya
