--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ navbar-links:
     - GitHub Pages: "https://pages.github.com/"
   Others: "http://tincya.com"
 
+shortcut: "img/shortcut.png"
 avatar: "/img/avatar-icon.jpg"
 
 navbar-col: "#FF9966"
@@ -20,7 +21,7 @@ navbar-text-col: "#FFFFFF"
 navbar-children-col: "#FF9966"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
-hover-col: "#0085A1"
+hover-col: "#e91e63"
 footer-col: "#FF9966"
 footer-text-col: "#ff2a2a"
 footer-link-col: "#ff2a2a"
