--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,8 @@ navbar-text-col: "#FFFFFF"
 navbar-children-col: "#FF9966"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
-hover-col: "#e91e63"
+link-hover-col: "#e91e63"
+hover-col: "#0085A1"
 footer-col: "#FF9966"
 footer-text-col: "#ff2a2a"
 footer-link-col: "#ff2a2a"
