--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ navbar-links:
     - GitHub Pages: "https://pages.github.com/"
   Others: "http://tincya.com"
 
-shortcut: "img/shortcut.png"
+shortcut: "/img/shortcut.png"
 avatar: "/img/avatar-icon.jpg"
 
 navbar-col: "#FF9966"
